gitops/clusters/talos-lab/workloads/whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: lab
spec:
  ingressClassName: nginx
  rules:
    - host: whoami.192.168.80.30.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  name: http
